--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#3faa80" />
+    <!-- <meta name="theme-color" content="#3faa80" /> -->
+    <meta name="theme-color" content="#60465b" />
     <meta
       name="description"
       content="Perudo online game platform"
